[package]
authors = ["natemara <natemara@gmail.com>"]
name = "schwift"
version = "0.1.0"
build = "build.rs"

[dependencies]
clap = "2.24"
rand = "0.3"
libloading = "0.4"
regex = "0.2.2"
lazy_static = "0.2.9"

[build-dependencies]
peg = { version = "0.5" }

[dev-dependencies]
assert_cli = "0.5"

[features]
debug_printing = []