[package]
authors = ["natemara <natemara@gmail.com>"]
name = "schwift"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[dependencies]
clap = "2"
rand = "0.6"
libloading = "0.5"
regex = "1"
lazy_static = "1"

[build-dependencies]
peg = { version = "0.5" }

[dev-dependencies]
assert_cli = "0.5"

[features]
debug_printing = []